# piki

./: .env  .gitignore  Cargo.toml  README.md  atlas.hcl  justfile
db/migrations/: 0_init.sql
db/queries/init/: accounts.sql  groups.sql
db/schema/: schema.json  schema.sql  tasks.sql
docker/: docker-compose.dev.yml
docker/dev/: compose.yml
src/: main.rs  models.rs
src/db/: models.rs
src/db/handlers/: users.rs
src/db/models/: user.rs
